examples/valid/program48.c
int main(void) {
    int x;
    x = 5;
    x = x * 2;
    return x;
}

