examples/invalid/program51.c
int main(void) {
    int x;
    x = 5;
    x *=;
    return x;
}

